--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=fa086ceae4dfefa958b6",
+    "/js/app.product.js": "/js/app.product.js?id=f248cde153277192a4d5",
+    "/css/app.css": "/css/app.css?id=7cab58508017b184d0f2",
+    "/resources/vendor/css/vendor.css": "/resources/vendor/css/vendor.css?id=df40d6e4c661bcd1790d",
+    "/resources/vendor/js/vendor.js": "/resources/vendor/js/vendor.js?id=797ba70666285dcf1e02"
 }
